# market-research-agent

./: .env.template  README.md  pyproject.toml
src/: main.ipynb  proxies.txt  streamlit_app.py
src/models/: schema.py
src/schema/: schema.py
src/utils/: helper.py  prompts.py  settings.py
src/workflows/: generate_usecase_workflow.py  research_workflow.py  web_search_workflow.py
